--- a/emergenciAPPS/res/layout/configuracion.xml
+++ b/emergenciAPPS/res/layout/configuracion.xml
@@ -2,7 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000"
+    android:background="@android:color/black"
     android:orientation="horizontal" >
 
         <Button
@@ -57,7 +57,8 @@
         android:layout_below="@+id/TextView01"
         android:layout_centerHorizontal="true"
         android:ems="10"
-        android:inputType="phone" />
+        android:inputType="phone"
+        android:textColor="#FFF" />
 
     <EditText
         android:id="@+id/editBombero"
@@ -66,7 +67,8 @@
         android:layout_alignLeft="@+id/editCentroMedico"
         android:layout_below="@+id/TextView02"
         android:ems="10"
-        android:inputType="phone" />
+        android:inputType="phone"
+        android:textColor="#FFF" />
 
     <TextView
         android:id="@+id/TextView04"
@@ -85,25 +87,7 @@
         android:layout_below="@+id/TextView04"
         android:layout_centerHorizontal="true"
         android:ems="10"
-        android:inputType="phone" />
-
-    <EditText
-        android:id="@+id/editMensajeAlerta"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editCentroMedico"
-        android:layout_below="@+id/textView2"
-        android:ems="10"
-        android:inputType="textMultiLine" />
-
-    <TextView
-        android:id="@+id/TextView01"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView2"
-        android:layout_centerVertical="true"
-        android:text="@string/numeroHospital"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:inputType="phone"
         android:textColor="#FFF" />
 
     <TextView
@@ -117,6 +101,27 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#FFF" />
 
-    
+    <EditText
+        android:id="@+id/editMensajeAlerta"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/editCentroMedico"
+        android:layout_below="@+id/textView2"
+        android:ems="10"
+        android:inputType="textMultiLine"
+        android:textColor="#FFF" >
+
+        <requestFocus />
+    </EditText>
+
+    <TextView
+        android:id="@+id/TextView01"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView1"
+        android:layout_centerVertical="true"
+        android:text="@string/numeroHospital"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#FFF" />
 
 </RelativeLayout>
