--- a/emergenciAPPS/res/layout/lista_contactos.xml
+++ b/emergenciAPPS/res/layout/lista_contactos.xml
@@ -27,7 +27,7 @@
     
     
     <Button
-        android:id="@+id/lista_boton_llamar"
+        android:id="@+id/btnEdit"
         android:background="@drawable/ic_action_content_edit"
         android:layout_width="30dp"
         android:layout_height="31dp"
@@ -39,31 +39,31 @@
         android:id="@+id/imagenGps"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        
         android:layout_alignBottom="@+id/numero"
+        android:layout_alignLeft="@+id/numero"
         android:layout_alignTop="@+id/numero"
         android:layout_marginRight="22dp"
-        android:layout_toLeftOf="@+id/ImageView01"
-        android:layout_toRightOf="@+id/nombre"
+        android:layout_marginLeft="65dp"
+        android:layout_toLeftOf="@+id/imagenEmail"
         android:src="@drawable/ic_action_device_access_location_found" />
 
     <ImageView
-        android:id="@+id/ImageView02"
+        android:id="@+id/imagenEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/ImageView01"
-        android:layout_alignTop="@+id/ImageView01"
-        android:layout_toLeftOf="@+id/lista_boton_llamar"
+        android:layout_alignBottom="@+id/imagenGps"
+        android:layout_alignTop="@+id/imagenGps"
+        android:layout_toLeftOf="@+id/btnEdit"
         android:src="@drawable/ic_action_content_email" />
 
     <ImageView
-        android:id="@+id/ImageView01"
+        android:id="@+id/imagenSMS"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/imageView1"
-        android:layout_alignTop="@+id/imageView1"
+        android:layout_alignBottom="@+id/imagenGps"
+        android:layout_alignTop="@+id/imagenGps"
         android:layout_marginRight="20dp"
-        android:layout_toLeftOf="@+id/ImageView02"
+        android:layout_toLeftOf="@+id/imagenEmail"
         android:src="@drawable/ic_action_social_chat" />
 
 </RelativeLayout>
