--- a/emergenciAPPS/res/menu/contacto.xml
+++ b/emergenciAPPS/res/menu/contacto.xml
@@ -7,4 +7,10 @@
 	    android:icon="@drawable/ic_action_content_save"
 	  	android:showAsAction="ifRoom|withText"
 	    />
+	<item 
+	    android:id="@+id/eliminarContacto"
+	    android:title="@string/action_save_conf"
+	    android:icon="@drawable/ic_action_content_discard"
+	  	android:showAsAction="ifRoom|withText"
+	    />
 </menu>
