--- a/emergenciAPPS/res/layout/activity_detalle_contacto.xml
+++ b/emergenciAPPS/res/layout/activity_detalle_contacto.xml
@@ -36,7 +36,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:ems="10"
-        android:inputType="text"
+        android:inputType="textCapSentences"
         android:textColor="#FFF" />
 
     <TextView
