--- a/emergenciAPPS/res/layout/lista_contactos.xml
+++ b/emergenciAPPS/res/layout/lista_contactos.xml
@@ -10,7 +10,7 @@
         android:layout_height="35dp"
         android:layout_margin="5dp"
         android:textColor="#FFF"
-        android:textSize="25sp"
+        android:textSize="22sp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="17dp" 
@@ -18,14 +18,14 @@
         
     <TextView
         android:id="@+id/numero"
-        android:textColor="#FFF"
+        android:textColor="#F5F197"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:textSize="17sp"
         android:layout_marginTop="2dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="15dp"
         android:layout_marginRight="5dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="10dp"
         android:layout_below="@+id/nombre" />
     
     
@@ -40,14 +40,11 @@
 
     <ImageView
         android:id="@+id/imagenGps"
-        android:layout_width="10dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/numero"
-        android:layout_alignLeft="@+id/numero"
-        android:layout_alignTop="@+id/numero"
-        android:layout_marginRight="0dp"
-        android:layout_marginLeft="65dp"
-        android:layout_toLeftOf="@+id/imagenEmail"
+        android:layout_marginLeft="30dp"
+        android:layout_toLeftOf="@+id/imagenSMS"
         android:src="@drawable/ic_action_device_access_location_found" />
 
     <ImageView
@@ -55,8 +52,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/imagenGps"
-        android:layout_alignTop="@+id/imagenGps"
-        android:layout_toLeftOf="@+id/btnEdit"
+        
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="50dp"
         android:src="@drawable/ic_action_content_email" />
 
     <ImageView
@@ -64,8 +62,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/imagenGps"
-        android:layout_alignTop="@+id/imagenGps"
-        android:layout_marginRight="20dp"
+        
+        android:layout_marginRight="5dp"
         android:layout_toLeftOf="@+id/imagenEmail"
         android:src="@drawable/ic_action_social_chat" />
 
