--- a/emergenciAPPS/res/layout/activity_seguimiento.xml
+++ b/emergenciAPPS/res/layout/activity_seguimiento.xml
@@ -5,25 +5,18 @@
     android:orientation="vertical" >
     <Spinner
 	    android:id="@+id/spinner"
-	    android:layout_width="200dp"
+	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/button_ver"
-        android:layout_width="500dp"
-        android:layout_toRightOf="@+id/spinner"
-        android:layout_height="wrap_content"
-        android:text="Ver" />
-    
-    <com.mapquest.android.maps.MapView
-	    android:id="@+id/mapSegumiento"
-	    android:layout_below="@+id/spinner"
-	    android:layout_width="fill_parent"
-	    android:layout_height="fill_parent"
-	    android:clickable="true"
-	    android:enabled="true"
-	    android:apiKey="Fmjtd%7Cluur2g0bn0%2Cb0%3Do5-9at2qu"
-	    />
+<!-- 	<com.mapquest.android.maps.MapView -->
+<!-- 	    android:id="@+id/mapSegumiento" -->
+<!-- 	    android:layout_below="@+id/spinner" -->
+<!-- 	    android:layout_width="fill_parent" -->
+<!-- 	    android:layout_height="fill_parent" -->
+<!-- 	    android:clickable="true" -->
+<!-- 	    android:enabled="true" -->
+<!-- 	    android:apiKey="Fmjtd%7Cluur2g0bn0%2Cb0%3Do5-9at2qu" -->
+<!-- 	    /> -->
     
 
 </RelativeLayout>
